--- a/styled-buttons.html
+++ b/styled-buttons.html
@@ -11,21 +11,19 @@
     <link rel="stylesheet" href="styled-buttons.css" />
   </head>
   <body>
-    <div class="clearfix">
-      <div id="far" class="float-left">
-        <button id="button1" class="btn">submit</button>
-        <button id="button2" class="btn">submit</button>
-        <button id="button3" class="btn">submit</button>
-        <button id="button4" class="btn">submit</button>
-        <button id="button5" class="btn">submit</button>
-      </div>
-      <div id="far" class="float-right">
-        <button id="button6" class="btn btn-primary">submit</button>
-        <button id="button7" class="btn btn-secondary">submit</button>
-        <button id="button8" class="btn btn-danger">submit</button>
-        <button id="button9" class="btn btn-warning">submit</button>
-        <button id="button10" class="btn btn-dark">submit</button>
-      </div>
+    <div id="far" class="float-start">
+      <button id="button1" class="btn">submit</button>
+      <button id="button2" class="btn">submit</button>
+      <button id="button3" class="btn">submit</button>
+      <button id="button4" class="btn">submit</button>
+      <button id="button5" class="btn">submit</button>
+    </div>
+    <div id="far" class="none">
+      <button id="button6" class="btn btn-primary">submit</button>
+      <button id="button7" class="btn btn-secondary">submit</button>
+      <button id="button8" class="btn btn-danger">submit</button>
+      <button id="button9" class="btn btn-warning">submit</button>
+      <button id="button10" class="btn btn-dark">submit</button>
     </div>
 
     <script src="styled-buttons.js"></script>
