--- a/card.html
+++ b/card.html
@@ -1,9 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card float-start" style="width: 30rem">
+      <div class="card-body">
+        <h5 class="card-title">Guessing your Number</h5>
+        <p class="card-text">Go through these steps</p>
+        <ol class="list-group list-group-flush">
+          <li class="list-group-item">Think of a #1-10</li>
+          <li class="list-group-item">Double it</li>
+          <li class="list-group-item">Add 4</li>
+          <li class="list-group-item">Divide it by 2</li>
+          <li class="list-group-item">
+            Subtract the # you started with from the # you have now
+          </li>
+        </ol>
+
+        <button
+          class="btn btn-primary dropdown-toggle"
+          type="button"
+          data-bs-toggle="dropdown"
+        >
+          Click for your answer
+        </button>
+        <ul class="dropdown-menu">
+          <li>2</li>
+        </ul>
+      </div>
+    </div>
+    <div class="card float-none" style="width: 30rem">
+      <div class="card-body">
+        <h5 class="card-title">Guessing your Number</h5>
+        <p class="card-text">Go through these steps</p>
+        <ol class="list-group list-group-flush">
+          <li class="list-group-item">Think of a #1-10</li>
+          <li class="list-group-item">Double it</li>
+          <li class="list-group-item">Add 10</li>
+          <li class="list-group-item">Divide it by 2</li>
+          <li class="list-group-item">
+            Subtract the # you started with from the # you have now
+          </li>
+        </ol>
+
+        <button
+          class="btn btn-primary dropdown-toggle"
+          type="button"
+          data-bs-toggle="dropdown"
+        >
+          Click for your answer
+        </button>
+        <ul class="dropdown-menu">
+          <li>5</li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
